examples/ZenohCS/NativeMethods.cs


        /// <summary>
        ///  Constructs a `z_owned_keyexpr_t` from a string, copying the passed string.
        ///  @return 0 in case of success, negative error code in case of failure (for example if `expr` is not a valid key expression or if it is
        ///  not in canon form.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_keyexpr_from_str(MaybeUninit* @this, byte* expr);

        /// <summary>
        ///  Constructs `z_owned_keyexpr_t` from a string, copying the passed string. The copied string is canonized.
        ///  @return 0 in case of success, negative error code in case of failure (for example if expr is not a valid key expression
        ///  even despite canonization).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_from_str_autocanonize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_keyexpr_from_str_autocanonize(MaybeUninit* @this, byte* expr);

        /// <summary>
        ///  Borrows `z_owned_keyexpr_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_keyexpr_t* z_keyexpr_loan(z_owned_keyexpr_t* this_);

        /// <summary>
        ///  Borrows `z_view_keyexpr_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_keyexpr_t* z_view_keyexpr_loan(z_view_keyexpr_t* this_);

        /// <summary>
        ///  Frees key expression and resets it to its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_keyexpr_drop(z_moved_keyexpr_t* this_);

        /// <summary>
        ///  Returns ``true`` if `keyexpr` is valid, ``false`` if it is in gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_keyexpr_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_keyexpr_check(z_owned_keyexpr_t* this_);

        /// <summary>
        ///  Returns ``true`` if `keyexpr` is valid, ``false`` if it is in gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_is_empty", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_view_keyexpr_is_empty(z_view_keyexpr_t* this_);

        /// <summary>
        ///  Returns 0 if the passed string is a valid (and canon) key expression.
        ///  Otherwise returns negative error value.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_is_canon", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_keyexpr_is_canon(byte* start, nuint len);

        /// <summary>
        ///  Canonizes the passed string in place, possibly shortening it by placing a new null-terminator.
        ///  May SEGFAULT if `start` is NULL or lies in read-only memory (as values initialized with string litterals do).
        ///
        ///  @return 0 upon success, negative error values upon failure (if the passed string was an invalid
        ///  key expression for reasons other than a non-canon form).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_canonize_null_terminated", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_keyexpr_canonize_null_terminated(byte* start);

        /// <summary>
        ///  Canonizes the passed string in place, possibly shortening it by modifying `len`.
        ///
        ///  May SEGFAULT if `start` is NULL or lies in read-only memory (as values initialized with string litterals do).
        ///
        ///  @return 0 upon success, negative error values upon failure (if the passed string was an invalid
        ///  key expression for reasons other than a non-canon form).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_canonize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_keyexpr_canonize(byte* start, nuint* len);

        /// <summary>
        ///  Constructs a `z_view_keyexpr_t` by aliasing a substring.
        ///  `expr` must outlive the constucted key expression.
        ///
        ///  @param this_: An uninitialized location in memory where key expression will be constructed.
        ///  @param expr: A buffer with length &gt;= `len`.
        ///  @param len: Number of characters from `expr` to consider.
        ///  @return 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_view_keyexpr_from_substr(MaybeUninit* @this, byte* expr, nuint len);

        /// <summary>
        ///  Constructs a `z_owned_keyexpr_t` by copying a substring.
        ///
        ///  @param this_: An uninitialized location in memory where key expression will be constructed.
        ///  @param expr: A buffer with length &gt;= `len`.
        ///  @param len: Number of characters from `expr` to consider.
        ///  @return 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_keyexpr_from_substr(MaybeUninit* @this, byte* expr, nuint len);

        /// <summary>
        ///  Constructs a `z_view_keyexpr_t` by aliasing a substring.
        ///  May SEGFAULT if `start` is NULL or lies in read-only memory (as values initialized with string litterals do).
        ///  `expr` must outlive the constucted key expression.
        ///
        ///  @param this_: An uninitialized location in memory where key expression will be constructed
        ///  @param expr: A buffer of with length &gt;= `len`.
        ///  @param len: Number of characters from `expr` to consider. Will be modified to be equal to canonized key expression length.
        ///  @return 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_from_substr_autocanonize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_view_keyexpr_from_substr_autocanonize(MaybeUninit* @this, byte* start, nuint* len);

        /// <summary>
        ///  Constructs a `z_keyexpr_t` by copying a substring.
        ///
        ///  @param this_: An uninitialized location in memory where key expression will be constructed.
        ///  @param expr: A buffer of with length &gt;= `len`.
        ///  @param len: Number of characters from `expr` to consider. Will be modified to be equal to canonized key expression length.
        ///  @return 0 in case of success, negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_from_substr_autocanonize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_keyexpr_from_substr_autocanonize(MaybeUninit* @this, byte* start, nuint* len);

        /// <summary>
        ///  Constructs a `z_view_keyexpr_t` by aliasing a string.
        ///  @return 0 in case of success, negative error code in case of failure (for example if expr is not a valid key expression or if it is
        ///  not in canon form.
        ///  `expr` must outlive the constucted key expression.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_view_keyexpr_from_str(MaybeUninit* @this, byte* expr);

        /// <summary>
        ///  Constructs a `z_view_keyexpr_t` by aliasing a string.
        ///  The string is canonized in-place before being passed to keyexpr, possibly shortening it by modifying `len`.
        ///  May SEGFAULT if `expr` is NULL or lies in read-only memory (as values initialized with string litterals do).
        ///  `expr` must outlive the constucted key expression.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_from_str_autocanonize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_view_keyexpr_from_str_autocanonize(MaybeUninit* @this, byte* expr);

        /// <summary>
        ///  Constructs a `z_view_keyexpr_t` by aliasing a substring without checking any of `z_view_keyexpr_t`'s assertions:
        ///
        ///  - `start` MUST be valid UTF8.
        ///  - `start` MUST follow the Key Expression specification, i.e.:
        ///   - MUST NOT contain ``//``, MUST NOT start nor end with ``/``, MUST NOT contain any of the characters ``?#$``.
        ///   - any instance of ``**`` may only be lead or followed by ``/``.
        ///   - the key expression must have canon form.
        ///
        ///  `start` must outlive constructed key expression.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_from_substr_unchecked", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_view_keyexpr_from_substr_unchecked(MaybeUninit* @this, byte* start, nuint len);

        /// <summary>
        ///  Constructs a `z_view_keyexpr_t` by aliasing a string without checking any of `z_view_keyexpr_t`'s assertions:
        ///
        ///   - `s` MUST be valid UTF8.
        ///   - `s` MUST follow the Key Expression specification, i.e.:
        ///    - MUST NOT contain `//`, MUST NOT start nor end with `/`, MUST NOT contain any of the characters `?#$`.
        ///    - any instance of `**` may only be lead or followed by `/`.
        ///    - the key expression must have canon form.
        ///
        ///  `s` must outlive constructed key expression.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_view_keyexpr_from_str_unchecked", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_view_keyexpr_from_str_unchecked(MaybeUninit* @this, byte* s);

        /// <summary>
        ///  Constructs a non-owned non-null-terminated string from key expression.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_keyexpr_as_view_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_keyexpr_as_view_string(z_loaned_keyexpr_t* @this, MaybeUninit* out_string);
